[tool.poetry]
name = "pyinaturalist-notebook"
version = "0.19.0"
description = "A Jupyter notebook image for iNaturalist data exploration & visualization"
authors = ["Jordan Cook"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
altair = ">=4.1"
altair-saver = ">=0.5"
bar_chart_race = ">=0.1"
beautifulsoup4 = ">=4.0"
black = ">=22.3"
ipyplot = ">=1.1"
isort = ">=5.10"
jupyterlab-code-formatter = ">=2.2"
jupyterlab-geojson = ">=3.1"
pillow = ">=9.1.1"
plotly = ">=5.1"
pyinaturalist-convert = {extras = ["all"], version = ">=0.6"}
vega-datasets = ">=0.9"
websocket-client = ">=1.3"
xarray = ">=0.18"

# Version solving sometimes get stuck on trying every combination of these
# urllib3 = "^2.0.7"
# boto3 = "^1.34.13"
# botocore = "^1.34.13"

# Specific version is optionally set via workflow variable -> Docker build arg
pyinaturalist = {extras = ["all"], version = "*"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
skip-string-normalization = true
line-length = 100
