[project]
name = "pyinaturalist-notebook"
version = "0.21.0"
description = "A Jupyter notebook image for iNaturalist data exploration & visualization"
authors = [
    {name = "Jordan Cook"}
]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "altair>=4.1",
    "altair-saver>=0.5",
    "bar_chart_race>=0.1",
    "beautifulsoup4>=4.0",
    "ipyplot>=1.1",
    "isort>=5.10",
    "folium>=0.20",
    "jupyterlab-geojson>=3.1",
    "pillow>=9.1.1",
    "plotly>=5.1",
    "polars>=1.35",
    "pyinaturalist-convert>=0.8",
    "pyarrow>=10.0",
    "pyopenssl>=23.2",
    "vega-datasets>=0.9",
    "websocket-client>=1.3",
    "xarray>=0.18",
    "xmltodict>=0.12",
    "pyinaturalist",
]
